# simple-fft-pp

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  RealFFT.md
.github/: copilot-instructions.md
benchmark/: CMakeLists.txt  benchmark.cpp  fft_benchmark.cpp  rfft_benchmark.cpp
include/: constexpr_cos.h  constexpr_math.h  fft_core.h  fft_dif.h  fixed_point.h  ifft_dit.h  rfft.h  simple_fft.h  simple_fft_complex.h  twiddles.h  view_types.h
tests/: CMakeLists.txt  butterfly_tests.cpp  fft_tests.cpp  fixed_point_tests.cpp  rfft_tests.cpp  roundtrip_tests.cpp  twiddles_test.cpp
